--- a/wp-content/themes/norcal-sbdc/assets/src/scss/modules/_gravity-forms.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/modules/_gravity-forms.scss
@@ -625,6 +625,7 @@ $gform-gutter-width: 10px;
 		.gsection_title {
 			margin-top: 0;
 			font-size: 2rem;
+			text-align: center;
 		}
 		.gsection_description {
 			text-align: center;
